Add more to game

--- a/twinegames/Makefile
+++ b/twinegames/Makefile
@@ -3,7 +3,7 @@ SHELL=/usr/bin/env fish
 SNOWMAN_DIR = ~/src/ref/snowman
 TWEEGO_DIR = ~/src/ref/tweego
 
-.PHONY: snowman tweego build dev
+.PHONY: snowman tweego build dev kid toriel dummy jerry sans
 
 snowman:
 	git clone https://github.com/videlais/snowman.git $(SNOWMAN_DIR)
@@ -29,3 +29,12 @@ toriel:
 
 dummy:
 	$(TWEEGO_DIR)/tweego -f snowman-2.0.3 -s DummyDateStart -w -o datenrule.html datenrule
+
+kid:
+	$(TWEEGO_DIR)/tweego -f snowman-2.0.3 -s MonsterKidDateStart -w -o datenrule.html datenrule
+
+jerry:
+	$(TWEEGO_DIR)/tweego -f snowman-2.0.3 -s JerryDateStart -w -o datenrule.html datenrule
+
+sans:
+	$(TWEEGO_DIR)/tweego -f snowman-2.0.3 -s JerryDateEnd -w -o datenrule.html datenrule
