--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ social:
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
   - jekyll-sitemap
