--- a/_config.yml
+++ b/_config.yml
@@ -17,13 +17,11 @@ title: Jon Cinque, Software Dev
 tagline: JonCDev
 email: me@jonc.dev
 description: >- # this means to ignore newlines until "baseurl:"
-  With 10 years of experience developing financial and web software, I am
-  motivated by collaborating with fellow developers, learning new domains, and
-  solving compelling technical problems.
+  Personal page providing programmer tutorials and info that I couldn't find elsewhere.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jonc.dev" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  joncinque
-linkedin_url:  https://www.linkedin.com/in/joncinque/
+github_username: joncinque
+linkedin_url: https://www.linkedin.com/in/joncinque/
 google_analytics: UA-157606878-1
 logo: "/icons/favicon.ico"
 social:
